fix: finished initial implementation
